--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -51,7 +51,8 @@
         <div class="quote-con">
           <div class="quote-inner">
             <p class="lead">"We chose NATS over other messaging platforms because it is as easy to deploy as it is to use, giving freedom to the developer to build a platform without limitations or hidden assumptions."</p>
-            <p><strong>&mdash;Raul Perez, Senior Engineer at R3Labs</strong></p>
+            <a class="quote-logo" href="http://carrenza.com" target="_blank"><img src="/img/user_logos/carrenza.png" alt="Carrenza"></a>
+            <p><strong>&mdash;Raül Pérez, Senior Engineer at Carrenza</strong></p>
           </div>
         </div>
       </li>
