Added quote for Pressly

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -9,6 +9,7 @@
       <li data-target="#quote-carousel" data-slide-to="4"></li>
       <li data-target="#quote-carousel" data-slide-to="5"></li>
       <li data-target="#quote-carousel" data-slide-to="6"></li>
+      <li data-target="#quote-carousel" data-slide-to="7"></li>
     </ol>
     <!-- Wrapper for slides -->
     <ul class="carousel-inner" role="listbox">
@@ -71,6 +72,15 @@
             <p class="lead">"NATS is clearly leading the messaging technology pack when it comes to performance, scalability, simplicity, and ease of use. These metrics made it the clear choice for our development team who are busy building our next-generation call-center platform."</p>
             <a class="quote-logo" href="http://www.avoxi.com/" target="_blank"><img src="/img/user_logos/avoxi.jpg" alt="AVOXI"></a>
             <p><strong>&mdash;Leif Madsen - Director of Engineering, Product Development, AVOXI</strong></p>
+          </div>
+        </div>
+      </li>
+      <li class="item">
+        <div class="quote-con">
+          <div class="quote-inner">
+            <p class="lead">"I discovered NATS for its performance, and stayed for it’s simplicity. It’s been a wonderfully reliable layer that connects our microservice architecture at Pressly. The source is easily readable and approachable, and the future developments keep me excited!"</p>
+            <a class="quote-logo" href="http://pressly.com/" target="_blank"><img src="/img/user_logos/pressly.png" alt="Pressly"></a>
+            <p><strong>&mdash;Peter Kieltyka - CTO, Pressly</strong></p>
           </div>
         </div>
       </li>
