Fixed a grammar error

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -78,7 +78,7 @@
       <li class="item">
         <div class="quote-con">
           <div class="quote-inner">
-            <p class="lead">"I discovered NATS for its performance, and stayed for it’s simplicity. It’s been a wonderfully reliable layer that connects our microservice architecture at Pressly. The source is easily readable and approachable, and the future developments keep me excited!"</p>
+            <p class="lead">"I discovered NATS for its performance, and stayed for its simplicity. It’s been a wonderfully reliable layer that connects our microservice architecture at Pressly. The source is easily readable and approachable, and the future developments keep me excited!"</p>
             <a class="quote-logo" href="http://pressly.com/" target="_blank"><img src="/img/user_logos/pressly.png" alt="Pressly"></a>
             <p><strong>&mdash;Peter Kieltyka - CTO, Pressly</strong></p>
           </div>
