Updated the apcera logo in the footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-offset-5 supported">
             <p>Supported By</p>
-            <p><a href="http://apcera.com/" target="_blank"><img class="img-responsive" src="/img/brand/apcera-logo-gray@2x.png" alt="Apcera"></a></p>
+            <p><a href="http://apcera.com/" target="_blank"><img class="img-responsive" src="/img/apcera_logo.png" alt="Apcera"></a></p>
           </div>
         </div>
       </div>
