fixed the logix so the theme will not look for templates it does not need

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,11 +13,13 @@
           {{end}}
       {{ end }}
 
+      {{ if ne .Site.Params.leftNav true }}
       {{ partial "quick-view.html" . }}
       <hr>
       {{ partial "performance.html" . }}
       <hr>
       {{ partial "quotes.html" . }}
+      {{ end }}
     </div>
   </div>
 </div>
