--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,6 +38,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
     <script src="/js/index.js"></script>
 
     <!-- Google Analytics -->
