Updated and fixed styles for the blog

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -103,6 +103,11 @@ a[name]:before {
   visibility: hidden;
 }
 
+// Labels
+.label {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 // Tables
 table {
   .table();
@@ -335,6 +340,13 @@ table#support-table {
 
 // Documentation
 
+// Blog
+.tweet-embed-con {
+  padding: 10px 0px;
+  iframe {
+    margin: 0px auto;
+  }
+}
 
 // Footer
 footer {
