Updated the nats logo to use the new and improved design!

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -3,8 +3,8 @@
 @import "bootstrap/bootstrap.less";
 
 // Colors
-@nats-brand-primary:      #182945;
-@nats-brand-secondary:    #46A5E5;
+@nats-brand-primary:      #232A45;
+@nats-brand-secondary:    #27aae1;
 @nats-brand-ternary:      #A8CB17;
 
 @nats-brand-gray-light:   #f5f6f9;
