--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,15 +2,17 @@
 <div id="main-con" class="container">
   <div class="row">
     <div class="col-md-12">
+      <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
       <div class="page-header">
-        <h1>{{ title .Title }}</h1>
-        <p>{{ .Params.author }}<br><small>{{ .Date.Format "January 2, 2006" }}</small></p>
+        <h1>{{ title .Title }}<br><small>{{ .Date.Format "January 2, 2006" }}</small></h1>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-9">
       {{ .Content }}
+      <hr>
+      <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
     </div>
     <div class="col-md-3">
       <div class="well well-sm">
