Updated the theme to support the new download page as well as add font awesome for icon support

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,6 +16,8 @@
 
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
