Added some margin for the right column meta data on a blog entry

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -346,6 +346,14 @@ table#support-table {
     margin: 0px auto;
   }
 }
+dl.blog-entry-meta {
+  dt {
+
+  }
+  dd {
+    margin-bottom: 10px;
+  }
+}
 
 // Footer
 footer {
