--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -12,7 +12,7 @@
       {{ range .Data.Pages }}
       <div class="row">
         <div class="col-md-12">
-          <h3><a href="{{ .Permalink }}">{{ .Title }}</a><br></h3>
+          <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a><br></h3>
           <p>By: <strong>{{ .Params.author }}</strong> - Date: <strong>{{ .Date.Format "January 2, 2006" }}</strong></p>
           <p>{{ .Summary }} <a href="{{ .RelPermalink }}">Read More&#8230;</a></p>
         </div>
