Had to make a slight change to how titles for the page are dealt with

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="/img/favicon.ico">
 
-    <title>{{if .Title}}{{.Site.Title}} - {{ .Title }}{{else}}{{.Site.Title}}{{end}}</title>
+    <title>{{if eq .Title ""}}{{.Site.Title}}{{else}}{{ .Title }}{{end}}</title>
 
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
