update README.md to clarify gulp dependencies; add NextGenLeads logo and quote

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -84,6 +84,15 @@
           </div>
         </div>
       </li>
+      <li class="item">
+        <div class="quote-con">
+          <div class="quote-inner">
+            <p class="lead">"We opted for NATS over other message systems due to its elegant simplicity and remarkable performance &mdash; and because NATS has an exceptional potential for scalability that matches our project's ambitions."</p>
+            <a class="quote-logo" href="http://nextgenleads.com/" target="_blank"><img src="/img/user_logos/nextgenleads.png" alt="NextGen Leads"></a>
+            <p><strong>&mdash;Aaron John Schlosser, Application Developer at NextGen Leads</strong></p>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
