--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -10,6 +10,7 @@
       <li data-target="#quote-carousel" data-slide-to="5"></li>
       <li data-target="#quote-carousel" data-slide-to="6"></li>
       <li data-target="#quote-carousel" data-slide-to="7"></li>
+      <li data-target="#quote-carousel" data-slide-to="8"></li>
     </ol>
     <!-- Wrapper for slides -->
     <ul class="carousel-inner" role="listbox">
