First round of the new homepage for the nats site

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-
+    {{if eq .IsHome false}}
     <!-- Footer -->
     <footer>
       <div class="container">
@@ -15,6 +15,7 @@
       </div>
     </footer>
     <!-- End Footer -->
+    {{end}}
 
     <!-- License Modal -->
     <div class="modal fade" id="licenseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
