--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {{ $baseUrl := .Site.BaseURL }}
-<html lang="en">
+<html lang="en"  id="{{ if isset .Params "cssid" }}{{ .Params.cssid }}{{ else if eq (relURL .URL) ("/" | safeHTML) }}home{{else}}{{ urlize .Title }}{{ end }}-html">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,8 +18,7 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic|Source+Sans+Pro:400,600,400italic,600italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,600,400italic,600italic|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -27,7 +26,7 @@
     <![endif]-->
   </head>
   <body id="{{ if isset .Params "cssid" }}{{ .Params.cssid }}{{ else if eq (relURL .URL) ("/" | safeHTML) }}home{{else}}{{ urlize .Title }}{{ end }}-page">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top{{if eq (relURL .URL) ("/" | safeHTML)}} home-page{{end}}">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -36,9 +35,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          {{if eq .IsHome false}}
           <a class="navbar-brand" href="/">
             <img alt="Nats.io" src="/img/logo.png">
           </a>
+          {{end}}
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           {{ $mainMenu := .Site.Menus.main }}
