--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {{ $baseUrl := .Site.BaseURL }}
-<html lang="en"  id="{{ if isset .Params "cssid" }}{{ .Params.cssid }}{{ else if eq (relURL .URL) ("/" | safeHTML) }}home{{else}}{{ urlize .Title }}{{ end }}-html">
+<html lang="en"  id="{{ if isset .Params "cssid" }}{{ .Params.cssid }}{{ else if .IsHome }}home{{else}}{{ urlize .Title }}{{ end }}-html">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body id="{{ if isset .Params "cssid" }}{{ .Params.cssid }}{{ else if eq (relURL .URL) ("/" | safeHTML) }}home{{else}}{{ urlize .Title }}{{ end }}-page">
+  <body id="{{ if isset .Params "cssid" }}{{ .Params.cssid }}{{ else if .IsHome }}home{{else}}{{ urlize .Title }}{{ end }}-page">
     <nav class="navbar navbar-default navbar-fixed-top{{if eq (relURL .URL) ("/" | safeHTML)}} home-page{{end}}">
       <div class="container">
         <div class="navbar-header">
