Quick cleanup of releases and an addition of the elixir client

--- a/layouts/partials/releases.html
+++ b/layouts/partials/releases.html
@@ -13,7 +13,7 @@
           <div class="col-md-5">
             {{ if .downloads }}
             <dl>
-              <dt>Download <i class="fa fa-download"></i></dt>
+              <dt>Download</dt>
               {{ range .downloads }}
               <dd><a href="{{ .url }}">{{ .name }}</a></dd>
               {{ end }}
