Updated layout for releases

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -30,6 +30,8 @@
                 {{ end }}
               </div>
               <div class="col-md-3 download-con">
+                <!-- Place this tag where you want the button to render. -->
+                <a class="github-button" href="https://github.com/ntkme/github-buttons/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download ntkme/github-buttons on GitHub">Download</a>
                 {{ if .links }}
                 <dl>
                   <dt>Download</dt>
