Update footer to include link to site repo

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-4 copyright">
-            <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>.</p>
+            <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
             <p><a href="#licenseModal" data-toggle="modal" data-target="#licenseModal">View License</a></p>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-offset-5 supported">
